--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
       <section class="intro">
         <header>
           <h1>Xinyuan Zhang</h1>
-          <!-- <p> -->
-          <!-- A free responsive site template designed by
+          <p>
+            <!-- A free responsive site template designed by
             <a href="https://twitter.com/ajlkn">@ajlkn</a> /
-            <a href="https://html5up.net">HTML5 UP</a>
-          </p> -->
+            <a href="https://html5up.net">HTML5 UP</a> -->
+            STEPHEN M. ROSS SCHOOL OF BUSINESS UNIVERSITY OF MICHIGAN
+          </p>
           <ul class="actions">
             <li>
               <a href="#first" class="arrow scrolly"
@@ -52,14 +53,24 @@
           <p>
             <strong>Xinyuan</strong> is a graduate student specializing in
             Consumer Behavior at the Stephen M. Ross School of Business,
-            University of Michigan. Her research interests encompass Consumer
-            Journey and Identity, Artificial Intelligence, Anthropomorphism, and
-            Luxury Consumption. Currently, her work focuses on exploring how
-            "travel companions" contribute to enriching the customer journey
-            beyond merely influencing outcomes. She also investigates the
-            dynamics of customer journeys in joint decision-making contexts,
-            employing a multidisciplinary approach that integrates diverse
-            theories and methods to analyze social influences.
+            University of Michigan. Her research interests include consumer
+            journeys, consumer identity, artificial intelligence, and
+            anthropomorphism. Currently, her work focuses on exploring how
+            "travel companions" enhance the customer journey beyond merely
+            influencing outcomes. She also examines the dynamics of customer
+            journeys in joint decision-making contexts, employing a
+            multidisciplinary approach that integrates diverse theories and
+            methods to analyze social influences.
+          </p>
+          <p>
+            Prior to joining the Ross School of Business, Xinyuan served as a
+            Research Assistant at Luohan Academy, an open research institute
+            founded by Alibaba Group and guided by distinguished social
+            scientists, including seven Nobel Laureates in Economics. In this
+            role, she conducted advanced data analysis, consumer segmentation,
+            and fintech impact assessments, leveraging a combination of
+            quantitative methodologies and qualitative insights to support
+            strategic decision-making.
           </p>
           <!-- <span class="image main"><img src="images/pic02.png" alt="" /></span> -->
         </div>
@@ -75,9 +86,10 @@
             <!-- <strong>Etiam tristique libero</strong> eu nibh porttitor amet
             fermentum. Nullam venenatis erat id vehicula ultrices sed ultricies
             condimentum. -->
-            University of Michigan Ann Arbor, MI M.A in Business Administration
+            <strong> University of Michigan</strong>
+            Ann Arbor, MI
             <br />
-            August 2022 – May 2025
+            M.A. in Business Administration, 2022 – 2025
           </p>
           <!-- <ul class="feature-icons">
             <li class="icon solid fa-laptop">Consequat tempus</li>
@@ -88,14 +100,12 @@
             <li class="icon solid fa-code">Nibh amet venenatis</li>
           </ul> -->
           <p>
-            Columbia University New York City, NY M.Sc in Applied Analytics
-            <br />
-            August 2018 – October 2019
+            <strong>Columbia University</strong> New York City, NY <br />M.Sc.
+            in Applied Analytics, 2018 – 2019
           </p>
           <p>
-            University of Queensland Brisbane, Australia BCom in Finance March
-            <br />
-            2014 – July 2017
+            <strong>University of Queensland</strong> Brisbane, Australia <br />
+            BCom in Finance, 2014 – 2017
           </p>
         </div>
       </section>
@@ -106,107 +116,42 @@
           <h2>PROFESSIONAL EXPERIENCE</h2>
         </header>
         <div class="content">
-          <!-- <p>
-            <strong>Research Assistant</strong> | Alibaba Group Luohan Academy
+          <p>
+            <strong>Luohan Academy, Alibaba Group. </strong>Hangzhou, China
             <br />
-            01/2021 -04/2022
-            <br />
-            Platform Data and Seller Decision-Making: Conducted qualitative
-            research through interviews and test accounts, analyzed data from
-            6.3 million sellers, and developed models to evaluate the impact of
-            platform tools on merchants.
-          </p> -->
+            Research Assistant, 2021 – 2022
+          </p>
+          <ul>
+            <li>
+              Platform Data and Seller Decision-Making: Conducted qualitative
+              research through interviews and test accounts, analyzed data from
+              6.3 million sellers, and developed models to evaluate the impact
+              of platform tools on merchants.
+            </li>
+            <li>
+              Fintech Credit and Household Behavior: Analyzed loan and consumer
+              data (1 billion users) to study loan histories and behavior
+              patterns, developed regression models, and visualized findings for
+              impactful insights.
+            </li>
+            <li>
+              Consumer Segmentation and Promotion Strategies: Grouped customers
+              by demographic features, integrated and cleaned historical data,
+              and analyzed key consumption drivers to inform targeted marketing
+              strategies.
+            </li>
+          </ul>
 
           <!-- Section -->
           <section>
-            <header>
-              <h3>Research Assistant | Alibaba Group Luohan Academy</h3>
+            <!-- <header>
+              <h3>Luohan Academy, Alibaba Group. Hangzhou, China</h3>
               <p>01/2021 -04/2022</p>
-            </header>
-            <div class="content">
-              <!-- <div class="gallery">
-                <a href="images/gallery/fulls/01.jpg" class="landscape"
-                  ><img src="images/gallery/thumbs/01.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/02.jpg"
-                  ><img src="images/gallery/thumbs/02.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/03.jpg"
-                  ><img src="images/gallery/thumbs/03.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/04.jpg" class="landscape"
-                  ><img src="images/gallery/thumbs/04.jpg" alt=""
-                /></a>
-              </div> -->
-              <p>
-                Platform Data and Seller Decision-Making: Conducted qualitative
-                research through interviews and test accounts, analyzed data
-                from 6.3 million sellers, and developed models to evaluate the
-                impact of platform tools on merchants.
-              </p>
-              <p>
-                Fintech Credit and Household Behavior: Analyzed loan and
-                consumer data (1 billion users) to study loan histories and
-                behavior patterns, developed regression models, and visualized
-                findings for impactful insights.
-              </p>
-              <p>
-                Consumer Segmentation and Promotion Strategies: Grouped
-                customers by demographic features, integrated and cleaned
-                historical data, and analyzed key consumption drivers to inform
-                targeted marketing strategies.
-              </p>
-            </div>
+            </header> -->
+            <div class="content"></div>
           </section>
 
           <!-- Section -->
-          <section>
-            <header>
-              <h3>Ministry of Science and Technology of the P.R.</h3>
-              <p>China Beijing, China.</p>
-              <br />
-              <p>Strategy Department 06/2020-12/2020</p>
-            </header>
-            <div class="content">
-              <!-- <div class="gallery">
-                <a href="images/gallery/fulls/05.jpg" class="landscape"
-                  ><img src="images/gallery/thumbs/05.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/06.jpg"
-                  ><img src="images/gallery/thumbs/06.jpg" alt=""
-                /></a>
-                <a href="images/gallery/fulls/07.jpg"
-                  ><img src="images/gallery/thumbs/07.jpg" alt=""
-                /></a>
-              </div> -->
-
-              <p>
-                <strong>Research Specialist</strong>
-                <br />
-                Research and Database Optimization: Collaborated with the
-                Institution of Agricultural Economics and Development to enhance
-                the database (http://nstep.ncste.org:8081/#/) by adding an
-                innovative CPI calculation module (using R and SQL) and updating
-                modules for Digital Economy Scale Calculation and Frontier
-                Technology Forecasting.
-              </p>
-              <p>
-                <strong>Pandemic Economy Analysis</strong> <br />Investigated
-                the economic impact of COVID-19 by identifying real-time
-                variables, such as people’s mobility, to measure and explain
-                variations in economic performance across countries.
-              </p>
-              <p>
-                <strong>Policy and Evaluation Contributions</strong>
-                <br />
-                Proposed improvements for the domestic sci-tech evaluation index
-                system, supported evaluations of science and technology projects
-                and policies, and studied trends in international science and
-                technology cooperation, particularly Sino-U.S. non-government
-                collaboration.
-              </p>
-            </div>
-          </section>
 
           <!-- Section -->
           <!-- <section>
@@ -283,11 +228,11 @@
           <ul class="items">
             <li>
               <h3>Email</h3>
-              <a href="#">zxinyuan@umich.edu</a>
+              <a href="mailto:zxinyuan@umich.edu">zxinyuan@umich.edu</a>
             </li>
             <li>
               <h3>Phone</h3>
-              <a href="#">+1 (734) 834-8130</a>
+              <a href="">+1 (734) 834-8130</a>
             </li>
             <li>
               <h3>Address</h3>
@@ -318,11 +263,13 @@
                     ><span class="label">Instagram</span></a
                   >
                 </li> -->
-                <!-- <li>
-                  <a href="#" class="icon brands fa-linkedin-in"
+                <li>
+                  <a
+                    href="https://www.linkedin.com/in/%E9%A6%A8%E5%85%83-%E5%BC%A0-9b5aa933a/?locale=en_US"
+                    class="icon brands fa-linkedin-in"
                     ><span class="label">LinkedIn</span></a
                   >
-                </li> -->
+                </li>
                 <li>
                   <a
                     href="https://github.com/XinyuanZhang-Info"
